# MutualFund-AI-ChatBot

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements-ingest.txt  requirements-scrape.txt
.github/workflows/: daily-corpus-refresh.yml
Docs/: Chunking_Embedding_Architecture.md  Fund_Facts_Storage.md  RAG_Architecture.md
api/: __init__.py  main.py  thread_store.py
config/: chunking.yaml  compliance.yaml  embedding.yaml  ingest.yaml  rag.yaml  scraper.yaml  sources.yaml
data/corpus/: hdfc-elss-tax-saver-fund-direct-plan-growth.md  hdfc-equity-fund-direct-growth.md  hdfc-focused-fund-direct-growth.md  hdfc-large-cap-fund-direct-growth.md  hdfc-mid-cap-fund-direct-growth.md
data/facts/: scheme_facts.json
data/index/: chunks.jsonl  embeddings_manifest.json  ingestion_manifest.json
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: QuestionGuideModal.tsx
frontend/lib/: api.ts  questionGuide.ts  userProfile.ts
jobs/: __init__.py
jobs/ingest/: __main__.py
jobs/scrape/: __init__.py  __main__.py  cli.py
phases/: README.md
phases/common/: __init__.py  config_loader.py  env.py  paths.py  (+1 more)
pipeline/: __init__.py  __main__.py  bm25_index.py  chroma_client.py  chunk_validator.py  chunker.py  config.py  corpus_loader.py  embedder.py  ingest.py  normalize.py  tokens.py  vector_store.py  versioning.py
runtime/: __init__.py
scripts/: chroma-login.ps1  verify-chroma-cloud.py
web/: README.md  app.js  index.html  styles.css
(+126 files in other folders)
