[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual-fund-faq"
version = "0.1.0"
description = "Facts-only mutual fund FAQ assistant (RAG)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
scrape = [
  "httpx>=0.27.0,<1",
  "trafilatura>=1.12.0,<2",
  "markdownify>=0.13.0,<1",
  "python-frontmatter>=1.1.0,<2",
  "PyYAML>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["phases*", "jobs*", "pipeline*", "api*"]
